<resources>
    <string name="app_name">UdeA-Cov</string>
    <string name="app_title">UdeA-Cov</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrarse"><u>Registrarse</u></string>
    <string name="SedesEdificio">8. Ubicación de las Sedes /Edificio donde realizas tu actividad y permaneces con mayor frecuencia *</string>
    <string-array name="sedes">
        <item>Bodega 2, Transporte Sierra</item>
        <item>Casa Bolívar</item>
        <item>Casa de la Corporación de Patologías Tropicales</item>
        <item>Casa Laboratorio Arqueológico</item>
        <item>Casa Olano</item>
        <item>Casa Serpentario</item>
        <item>Carmen de Viboral</item>
        <item>Caucasia</item>
        <item>Centro  cultural de la Facultad de Artes</item>
        <item>Ciudad Universitaria</item>
        <item>Ciudadela Robledo</item>
        <item>Centro Internacional de Idiomas</item>
        <item>Edificio Antioquia</item>
        <item>Edificio Antigua Facultad de Derecho</item>
        <item>Edificio Bedout</item>
        <item>Edificio de Extensión</item>
        <item>Enfermería</item>
        <item>Edificio San Ignacio (Paraninfo)</item>
        <item>Facultad Nacional de Salud Pública</item>
        <item>IPS Universitaria</item>
        <item>Hacienda La Candelaria</item>
        <item>Hacienda La Montaña</item>
        <item>Hacienda Vegas de la Clara</item>
        <item>Medicina</item>
        <item>Odontología</item>
        <item>Parque de Emprendimiento Empresarial</item>
        <item>Parque de la Vida</item>
        <item>Patología en el Hospital San Vicente</item>
        <item>Puerto Berrío</item>
        <item>Santa Fé de Antioquia</item>
        <item>Sede de Investigación Universitaria - SIU</item>
        <item>Segovia - Remedios</item>
        <item>Sonsón</item>
        <item>TIP y Taquilla única de correos</item>
        <item>Urabá - Apartadó</item>
        <item>Urabá - Ciencias del Mar</item>
        <item>Urabá - Tulenapa</item>
        <item>Yarumal</item>
        <item>Otro, externo</item>
    </string-array>
    <string name="bloques">9. Bloque y nomenclatura de la oficina en donde realizas normalmente tus labores *</string>
    <string-array name="unidad">
        <item>Corporación Académica para el Estudio de Patologías Tropicales</item>
        <item>Corporación Académica Ciencias Básicas Biomédicas</item>
        <item>Corporación Académica Ambiental</item>
        <item>Dirección Bienestar Universitario</item>
        <item>Dirección de Comunicaciones</item>
        <item>Dirección Jurídica</item>
        <item>Dirección de Planeación y Desarrollo Institucional</item>
        <item>Dirección de Posgrados</item>
        <item>Dirección de Regionalización</item>
        <item>Dirección de Relaciones Internacionales</item>
        <item>Escuela de Idiomas</item>
        <item>Escuela Interamericana de Bibliotecología</item>
        <item>Escuela de Microbiología</item>
        <item>Escuela de Nutrición y Dietética</item>
        <item>Facultad de Artes</item>
        <item>Facultad de Ciencias Agrarias</item>
        <item>Facultad de Ciencias Económicas</item>
        <item>Facultad de Ciencias Exactas y Naturales</item>
        <item>FCEN - Instituto de Biología</item>
        <item>FCEN - Instituto de Física</item>
        <item>FCEN - Instituto de Matemáticas</item>
        <item>FCEN - Instituto de Química</item>
        <item>Facultad de Ciencias Farmacéuticas y Alimentarias</item>
        <item>Facultad de Ciencias Sociales y Humanas</item>
        <item>Facultad de Comunicaciones</item>
        <item>Facultad de Derecho y Ciencias Políticas</item>
        <item>Facultad de Educación</item>
        <item>Facultad de Enfermería</item>
        <item>Facultad de Ingeniería</item>
        <item>Facultad de Medicina</item>
        <item>Facultad Nacional de Salud Pública</item>
        <item>Facultad de Odontología</item>
        <item>Instituto de Estudios Políticos</item>
        <item>Instituto de Estudios Regionales</item>
        <item>Instituto de Filosofía</item>
        <item>Instituto Universitario de Educación Física y Deporte</item>
        <item>Oficina de Auditoría Institucional</item>
        <item>Rectoría</item>
        <item>Secretaría General</item>
        <item>SIU</item>
        <item>Vicerrectoría Administrativa</item>
        <item>Vicerrectoría de Docencia</item>
        <item>Vicerrectoría de Extensión</item>
        <item>Vicerrectoría General</item>
        <item>Vicerrectoría de Investigación</item>
    </string-array>
    <string name="InstalarApp">Recuerda instalar el aplicativo CoronApp de Colombia. Si tu o alguien de tu familia llega a tener síntomas existen líneas de atención 24 horas En Medellín y
        Área metropolitana: 123. En el Departamento de Antioquia: #774. A nivel Nacional las líneas telefónicas 018000955590 (Línea nacional) y 192 (desde un celular)</string>
    <string-array name="Unidad_académica">
        <item>Facultad de Artes</item>
        <item>Facultad de Ciencias Agrarias</item>
        <item>Facultad de Ciencias Económicas</item>
        <item>Facultad de Ciencias Exactas y Naturales</item>
        <item>Facultad de Ciencias Farmacéuticas y Alimentarias</item>
        <item>Facultad de Ciencias Sociales y Humanas</item>
        <item>Facultad de Comunicaciones</item>
        <item>Facultad de Derecho y Ciencias Políticas</item>
        <item>Facultad de Educación</item>
        <item>Facultad de Enfermería</item>
        <item>Facultad de Ingeniería</item>
        <item>Facultad de Medicina</item>
        <item>Facultad de Odontología</item>
        <item>Facultad de Salud Pública</item>
        <item>Escuela de Idiomas</item>
        <item>Escuela Interamericana de Bibliotecología</item>
        <item>Escuela de Microbiología</item>
        <item>Escuela de Nutrición y Dietética</item>
        <item>Corporación Ambiental</item>
        <item>Corporación Ciencias Básicas Biomédicas</item>
        <item>Corporación Patologías Tropicales</item>
        <item>Sede de Investigación Universitaria SIU</item>
        <item>Instituto de Educación Física</item>
        <item>Instituto de Estudios Regionales</item>
        <item>Oficina de Auditoria Institucional</item>
        <item>Vicerrectoría Administrativa</item>
        <item>Vicerrectoría de Investigación</item>
        <item>Vicerrectoría de Docencia</item>
        <item>Vicerrectoría de Extensión</item>
        <item>Vicerrectoría General</item>
        <item>Dirección de Bienestar Universitario</item>
        <item>Dirección de Comunicaciones</item>
        <item>Dirección Jurídica</item>
        <item>Dirección de Planeación y Desarrollo Institucional</item>
        <item>Dirección de Posgrado</item>
        <item>Dirección de Regionalización</item>
        <item>Dirección de Relaciones Internacionales</item>
        <item>Secretaría General</item>
    </string-array>
    <string-array name="Sede">
        <item>Sede</item>
        <item>Ciudad Universitaria</item>
        <item>Ciudadela Robledo</item>
        <item>Facultad de Enfermería</item>
        <item>Facultad de Odontolología</item>
        <item>Facultad de Medicina</item>
        <item>Facultad Nacional de Salud Pública</item>
        <item>SIU</item>
        <item>Ins. Patología (Predio HUSVP)</item>
        <item>Casa GDCOM Aldeaña Neurociencias</item>
        <item>Laboratorios Clinico (En IPS Univ)</item>
        <item>Neurociencias</item>
        <item>Progr_Est_Cont_Enferm_Tropic (PECET)</item>
        <item>Casa Serpentario</item>
        <item>Centro de Servi. Pedagogicos/Casa Olano</item>
        <item>Laboratorio de Arqueología</item>
        <item>Casa Bolivar</item>
        <item>Edificio Bedout</item>
        <item>Ant. Escuela de Derecho</item>
        <item>Bachillerato Nocturno</item>
        <item>Edificio San Ignacio</item>
        <item>CLIC - Ed. Suramericana</item>
        <item>Edificio de Extensión</item>
        <item>Parque del Emprendimiento</item>
        <item>Edificio Posgrados - Guayabal</item>
        <item>Edificio Antioquia (La Naviera)</item>
        <item>Parque de la Vida</item>
        <item>Clínica León XIII - Bloque 2</item>
        <item>Centro Cultural- Fac Artes</item>
        <item>Hda. El Progreso - Mun. Barbosa - Correg. El Hatillo</item>
        <item>Hda.Vegas de La Clara - Mun_GomezPlata</item>
        <item>Hda. La Montaña - Mun_San Pedro de los Milagros</item>
        <item>Hda. La Candelaria - Mun_Caucasia</item>
        <item>Est_Piscicola Mun. San Roque Correg_San Jose del Nus</item>
        <item>Planta piloto de Bioetanol</item>
        <item>Sede Oriente - Carmen de Viboral</item>
        <item>Sede Bajo Cauca - Caucasia</item>
        <item>Sede Urabá - Turbo</item>
        <item>Sede Urabá - Turbo (Ciencias del Mar)</item>
        <item>Sede Urabá - Tulenapa (Carepa)</item>
        <item>Sede Urabá - Apartadó</item>
        <item>Sede Oriente - Sonson</item>
        <item>Sede Suroeste - Andes</item>
        <item>Sede Occidente - Santa Fe de Antioquia</item>
        <item>Sede Magdalena Medio - Pto. Berrio</item>
        <item>Sede Nordeste - Amalfi</item>
        <item>Sede Nordeste - Segovia</item>
        <item>Sede Norte - Yarumal</item>
        <item>Casa Bogotá</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_de_coronapp_enlace">Link de CoronApp. </string>
    <string name="enlace_coronapp"> <a href="https://coronaviruscolombia.gov.co/Covid19/aislamiento-saludable/coronapp.html"> Enlace</a> </string>
    <string name="descripcion_medellin_mecuida">A continuación debe anexar pantallazo donde certifique su registro en la aplicación de Medellín Me Cuida</string>
    <string name="subir_documento">Subir Documento</string>
    <string name="text_preingreso">Encuesta-Preingreso de condiciones de salud y convivencia COVID-19.</string>
    <string name="ingresa_tu_nombre_de_usuario">Ingresa tu nombre de usuario</string>
    <string name="tu_respuesta">Tu respuesta</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="direccion_de_correo">Dirección de correo electrónico</string>
    <string name="tu_direccion_de_correo_electronico">Tu dirección de correo electrónico</string>
    <string name="documento">1. Tipo de documento</string>
    <string name="tu_respuesta_numeroDocumento">Tu respuesta</string>
    <string name="cedula_de_ciudadania">Cédula de ciudadanía</string>
    <string name="cedula_de_extranjeria">Cédula de extranjería</string>
    <string name="tarjeta_de_identidad">Tarjeta de Identidad</string>
    <string name="pasaporte">Pasaporte</string>
    <string name="otro">Otro</string>
    <string name="numero_de_documento">2. Número de documento</string>
    <string name="universidad_de_antioquia">UNIVERSIDAD DE ANTIOQUIA</string>
    <string name="declaracion_de_responsabilidad_titulo">DECLARACION DE RESPONSABILIDAD DE CUMPLIMIENTO DE MEDIDAS DE PREVENCIÓN ANTE EMERGENCIA SANITARIA DEL COVID 19</string>
    <string name="fecha">Fecha:</string>
    <string name="yo">Yo,</string>
    <string name="identificada_con_cedula">Identificada con cédula</string>
    <string name="parrafo_de_declaracion_de_compromiso">Declaro que recibí la debida información respecto a las medidas de prevención que debo llevar a cabo para prevenir el contagio con el virus causante del sindrome respiratorio agudo, en el ingreso autorizado, es así que asumo el compromiso con el cumplimiento de las medidas preventivas que me fueron enviadas en relación con protocolos de desinfección, autocuidado, uso de elementos de protección personal.</string>
    <string name="declaro_que_he_leido_y_entendido_el_protocolo">Declaro que he leído y entendido el protocolo que me fué enviado.</string>
    <string name="aprobacion_colaborador">Aprobación Colaborador</string>
</resources>