<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/style_solicitud_ingreso"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="logo_udea"
            android:src="@drawable/logo_verde_udea" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/universidad_de_antioquia"
                android:textSize="12sp" />

             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                 android:textStyle="bold"
                android:text="@string/declaracion_de_responsabilidad_titulo"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow>
            <TextView
                android:id="@+id/txt_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/fecha" />

            <TextView
                android:id="@+id/txt_fecha_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02/Feb/2021" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_yo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yo" />

            <TextView
                android:id="@+id/txt_nombre_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valentina Perez" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txt_cedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identificada_con_cedula" />

            <TextView
                android:id="@+id/input_cedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= " 1.061.345.678" />

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parrafo_de_declaracion_de_compromiso" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/declaro_que_he_leido_y_entendido_el_protocolo" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aprobacion_colaborador" />

        <Button
            android:id="@+id/btn_siguiente"
            style="@style/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:text="Siguiente" />

    </LinearLayout>



</LinearLayout>
