<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="co.edu.udea.udeacov.fragmentos.porteria.FiltroUsuarioPorteriaViewModel" />

        <variable
            name="fragmentFiltroUsuario"
            type="co.edu.udea.udeacov.fragmentos.porteria.FiltroUsuarioPorteria" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:context=".fragmentos.porteria.FiltroUsuarioPorteria">

        <TextView
            android:id="@+id/txt_encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Por favor, ingresa los siguientes datos para buscar la solicitud:" />

        <TextView
            android:id="@+id/txt_tipoDocumento"
            android:layout_below="@id/txt_encabezado"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#616161"
            android:text="Tipo de Documento:"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/rg_tipoDocumento"
            android:layout_marginTop="5dp"
            android:layout_below="@id/txt_tipoDocumento"
            android:layout_width="370dp"
            android:textSize="13sp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/cedula_de_ciudadania" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cedula_de_extranjeria" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tarjeta_de_identidad" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pasaporte" />

            <RadioButton
                android:id="@+id/rb_otro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/otro" />


            <EditText
                android:id="@+id/otroDoc_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="Otro: "
                android:inputType="text"
                android:textSize="14sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/indicaciones_porteria_txt"
            android:layout_below="@+id/rg_tipoDocumento"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#616161"
            android:text="Ingresa úmero de documento del usuario:" />

        <EditText
            android:id="@+id/inputNumeroDocumento"
            android:layout_below="@+id/indicaciones_porteria_txt"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Sin puntos, ni comas, ni espacios" />


        <Button
            android:id="@+id/btnBuscarSolicitud"
            style="@style/botones_barra_progreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputNumeroDocumento"
            android:layout_alignParentStart="true"
            android:layout_marginStart="66dp"
            android:layout_marginTop="20dp"
            android:text="Buscar" />

        <Button
            android:id="@+id/btn_verTablaRegistros"
            style="@style/botones_barra_progreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputNumeroDocumento"
            android:layout_alignBaseline="@id/btnBuscarSolicitud"
            android:layout_centerInParent="true"
            android:layout_marginLeft="71dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/btnBuscarSolicitud"
            android:text="Ver tabla" />


    </RelativeLayout>
</layout>