<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preingreso1">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:id="@+id/preingreso"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="8dp"

        android:gravity="center|top"
        android:orientation="vertical">>

        <TextView
            android:id="@+id/preingreso_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SedesEdificio"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Spinner
            android:id="@+id/preingreso_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sedes" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/preingreso_textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bloques"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/preingreso_txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="Tu respuesta"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:id="@+id/preingreso_textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unidad"
            android:textSize="14sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Spinner
            android:id="@+id/preingreso_spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/unidad" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/txt_prioridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="¿Perteneces a algún proyecto de extensión?" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Si" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No" />
        </RadioGroup>
        <EditText
            android:id="@+id/preingreso_txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="Si respondiste SI, ¿Cómo se llama el proyecto?"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/preingreso_txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="¿Cual es tu municipio de residencia?"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_prioridad1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Para ir a trabajar la mayor parte del tiempo te transportas en:" />

        <Spinner
            android:id="@+id/preingreso_spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/transporte" />

        <Button
            android:id="@+id/preingresobtn_siguiente3"
            style="@style/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Siguiente" />


    </LinearLayout>
</FrameLayout>